# DualBootPatcher

./: .Travis.yml  .gitignore  .gitmodules  .travis.yml  05_galaxy_tab_tablet.yml  07_other.yml  CMakeLists.txt  CONTRIBUTORS.md  Doxyfile  Jenkinsfile.Build  Jenkinsfile.Master  Jenkinsfile.PullRequest  Push.sh  README  README.Linux  README.jflte.txt  README.md  README.txt  Travis.yml  build.sh  builder  circle.yml  defaults.conf  dillpack.sh  patch-file.bat  patch-file.sh  patcher.conf  patcher.yaml.in  runcmake  travis.yml  update-gh-pages.sh
MultiBootPatcher/: CMakeLists.txt  Doxyfile
MultiBootPatcher/cmake/: ConfigAndroid.cmake  ConfigDesktop.cmake  MinGWToolchain.cmake
MultiBootPatcher/data/: CMakeLists.txt  patcher.xml.in
MultiBootPatcher/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_p.h  qcombocheckbox.cpp  qcombocheckbox.h  qcombocheckbox_p.h
MultiBootPatcher/icons/: build.sh
MultiBootPatcher/libdbp/: Android.mk.in  CMakeLists.txt  bootimage.cpp  bootimage.h  bootimage_p.h  cpiofile.cpp  cpiofile.h  cpiofile_p.h  device.cpp  device.h  device_p.h  errors.h  fileinfo.cpp  fileinfo.h  fileinfo_p.h  libdbp_global.h  partitionconfig.cpp  partitionconfig.h  partitionconfig_p.h  patcherconfig.cpp  patcherconfig.h  patchererror.cpp  patchererror.h  patcherinterface.cpp  patcherinterface.h  patcherpaths.cpp  patcherpaths.h  patcherpaths_p.h  patchinfo.cpp  patchinfo.h  patchinfo_p.h  plugininterface.cpp  plugininterface.h
MultiBootPatcher/libloki/: CMakeLists.txt  get-loki.sh
MultiBootPatcher/libmountpoint/: CMakeLists.txt
MultiBootPatcher/mbtool/: Android.mk.in  config.c  config.h  logging.c  logging.h  main.c  mount_fstab.c  mount_fstab.h
MultiBootPatcher/plugins/: CMakeLists.txt
MultiBootPatcher/shortcuts/: windows.cpp
MultiBootPatcher/syncdaemon/: Application.mk  CMakeLists.txt  configfile.cpp  configfile.h  get-jsoncpp.sh  syncdaemon.cpp  syncdaemon.h  task.h
android/: CMakeLists.txt
app/: CMakeLists.txt  info.prop.in  main.cpp
app/resources/: main.qml  qtquickcontrols2.conf  resources.qrc
bootimgtool/: CMakeLists.txt  bootimgtool.cpp  bootimgtool.manifest  bootimgtool.rc
cryptfstool/: CMakeLists.txt  main.cpp  main_rec.cpp
data/: .gitignore  CMakeLists.txt  create-aromawrapper.sh  info.prop.in  merge_patchinfos.py  patchinfos.gen.xml
data/devices/: 360.yml  ASUS_X00TD  CMCC-M653.yml  CMakeLists.txt  HTC  HTC.txt  HTC.yml  HTC10  Huyndai.yml  Micromax_q380.yml  SAMPLE.yml  SonyXperiaZ  US998.yml  Xiaomi.ysl  acer.yml  alcatel.yml  am523.yml  amazon.yml  archos.yml  ark.yml  asus.yml  blu.yml  bq.yml  cagabi.yml  cherrymobile.yml  chinamobile.yml  cmcc.yml  cool 1 dual  cool1dual.yml  coolpad.yml  dexp.yml  dns.yml  doogee.yml  elephone.yml  energy_sistem.yml  energy_system.yml  fly.yml  ginzzu.yml  gionee.yml  google.yml  (+49 more)
data/patchinfos/: README  Sample.xml
data/scripts/: backuppermtool.sh  bb-wrapper.sh  dualboot.sh
devicesgen/: CMakeLists.txt  devicesgen.cpp
examples/: CMakeLists.txt  bingrep.cpp  bootimg_compare.cpp  desparse.cpp  libmbp_test.cpp  libmbpatcher_test.cpp  mbtrace.cpp
gui/: CMakeLists.txt  main.cpp  main.manifest  main.rc  mainwindow.cpp  mainwindow.h  mainwindow_p.h  mbp.desktop  qcheckboxlistdelegate.cpp  qcheckboxlistdelegate.h  qcombocheckbox.cpp
libmbbootimg/: CMakeLists.txt
libmbcommon/: CMakeLists.txt  external.yaml
libmbdevice/: CMakeLists.txt  schemas2cpp.cpp
libmblog/: Android.include.mk.in  Android.mk.in  Android.shared.include.mk.in  Android.shared.mk.in  Android.static.include.mk.in  Android.static.mk.in  Application.mk  CMakeLists.txt
libmbp/: .gitignore  Android.common.mk.in  Android.include.mk.in  Android.mk.in  Android.shared.include.mk.in  Android.shared.mk.in  Android.static.include.mk.in  Android.static.mk.in  Application.mk  Application.static.mk  CMakeLists.txt  bootimage-common.h  bootimage.cpp  bootimage.h  cpiofile.cpp  cpiofile.h  device.cpp  device.h  errors.h  fileinfo.cpp  fileinfo.h  libmbp_global.h  logging.h  partitionconfig.cpp  partitionconfig.h  patcherconfig.cpp  patcherconfig.h  patchererror.cpp  patchererror.h  patcherinterface.h  patchinfo.cpp  patchinfo.h
libmbp/devices/: ark.h  (+34 more)
libmbpatcher/: CMakeLists.txt
libmbpio/: Android.include.mk.in  Android.mk.in  Android.static.include.mk.in  Android.static.mk.in  Application.mk  CMakeLists.txt  delete.cpp  directory.cpp  directory.h  error.cpp  error.h  file.h  path.cpp  path.h
libmbsign/: CMakeLists.txt
libmbsparse/: Android.include.mk.in  Android.mk.in  Android.static.include.mk.in  Android.static.mk.in  CMakeLists.txt
libmbsystrace/: CMakeLists.txt
libmbutil/: Android.include.mk.in  Android.mk.in  Android.static.include.mk.in  Android.static.mk.in  CMakeLists.txt  external.yaml
libmiscstuff/: .gitignore  Android.mk.in  Application.mk  CMakeLists.txt  libmiscstuff.cpp  libmiscstuff.h  mntent.c  mntent.h
libmiscstuff-jni/: CMakeLists.txt  constants.cpp  jni_load.cpp  libmiscstuff.cpp
mbbootui/: CMakeLists.txt  README.md  daemon_connection.cpp  daemon_connection.h  data.cpp  data.hpp  find_file.cpp  find_file.hpp  info.prop.in  infomanager.cpp  infomanager.hpp  main.cpp  twrp-functions.cpp  twrp-functions.hpp  variables.h
mbtool/: .gitignore  Android.certs.mk.sample  Android.mk.in  Application.mk  CMakeLists.txt  actions.c  actions.cpp  actions.h  apk.cpp  apk.h  appsync.cpp  appsync.h  appsyncmanager.cpp  appsyncmanager.h  archive_util.cpp  archive_util.h  auditd.cpp  auditd.h  backup.cpp  backup.h  bootimg_util.cpp  bootimg_util.h  common.h  config.c  daemon.c  daemon.cpp  daemon.h  daemon_v3.cpp  daemon_v3.h  decrypt.cpp  decrypt.h  emergency.cpp  emergency.h  external.yaml  file_contexts.cpp  file_contexts.h  image.cpp  image.h  init.cpp  init.h  (+63 more)
misc/: CMakeLists.txt
odinupdater/: Android.mk.in  Application.mk  CMakeLists.txt  fuse-sparse.cpp  odinupdater.cpp
shortcuts/: CMakeLists.txt  windows.cpp
signtool/: CMakeLists.txt  signtool.cpp
syncdaemon/: Android.mk  Application.mk  CMakeLists.txt  common.cpp  common.h  configfile.h  get-jsoncpp.sh  syncdaemon.h  task.h
(+3438 files in other folders)
